--- a/Kubernetes/Kubernetes-manifest/azure-board.yaml
+++ b/Kubernetes/Kubernetes-manifest/azure-board.yaml
@@ -60,6 +60,9 @@ spec:
                   key: stage-knhdbpassword
             - name: mongock.migration-scan-package
               value: com.publicissapient.kpidashboard.apis.mongock.installation
+            # Adding cron expressions
+            - name: azure.cron
+              value: "0 0 */12 * * *"
         # resources:
         #   requests:
         #     memory: "1Gi"
