--- a/Kubernetes/Kubernetes-manifest/jira.yaml
+++ b/Kubernetes/Kubernetes-manifest/jira.yaml
@@ -65,15 +65,15 @@ spec:
               value: com.publicissapient.kpidashboard.apis.mongock.installation
             - name:  notification.switch
               value: "false"
-            # Adding cron expressions
-            # - name: jira.scrumBoardCron
-            #   value: "0 */30 * * * *"
-            # - name: jira.scrumJqlCron
-            #   value: "0 */30 * * * *"
-            # - name: jira.kanbanBoardCron
-            #   value: "0 */30 * * * *"
-            # - name: jira.kanbanJqlCron
-            #   value: "0 */30 * * * *"
+            Adding cron expressions
+            - name: jira.scrumBoardCron
+              value: "0 0 */12 * * *"
+            - name: jira.scrumJqlCron
+              value: "0 0 */12 * * *"
+            - name: jira.kanbanBoardCron
+              value: "0 0 */12 * * *"
+            - name: jira.kanbanJqlCron
+              value: "0 0 */12 * * *"
         envFrom:
         - configMapRef:
             name: knowhow-config
