--- a/Kubernetes/knowhow-helm/knowhow-azure-board-processor/values.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-azure-board-processor/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-env: uat
+env: stage-
 
 replicaCount: 1
 
@@ -10,7 +10,7 @@ image:
   repository: speedtools.azurecr.io/knowhow-azure-board-processor
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "8.1.1"
+  tag: "9.0.0-SNAPSHOT"
 
 configmapname: knowhow-config
 
