--- a/Kubernetes/knowhow-helm/knowhow-customapi/templates/deployment.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-customapi/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: customapi
-  namespace: {{ .Values.env}}-knowhow
+  namespace: {{ .Values.env}}knowhow
   labels:
     app: customapi
 spec:
@@ -82,7 +82,7 @@ spec:
               name: {{ .Values.configmapname }}
           volumeMounts:
             - name: knowhow-secrets-store
-              mountPath: "/mnt/{{ .Values.env}}-secrets-store"
+              mountPath: "/mnt/{{ .Values.env}}secrets-store"
               readOnly: true
       volumes:
         - name: knowhow-secrets-store
@@ -90,7 +90,7 @@ spec:
             driver: secrets-store.csi.k8s.io
             readOnly: true
             volumeAttributes:
-              secretProviderClass: "{{ .Values.env}}-secretproviderclass"
+              secretProviderClass: "{{ .Values.env}}secretproviderclass"
           livenessProbe:
             tcpSocket:
               port: {{ .Values.service.port }}
