--- a/Kubernetes/knowhow-helm/knowhow-azure-board-processor/templates/service.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-azure-board-processor/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: azure-board-processor
-  namespace: {{ .Values.env}}-knowhow
+  namespace: {{ .Values.env}}knowhow
   labels:
     app: azure-board-processor
 spec:
