--- a/Kubernetes/knowhow-helm/knowhow-azure-pipeline-repo/values.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-azure-pipeline-repo/values.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: 1
 
-env: uat
+env: stage-
 
 configmapname: knowhow-config
 
@@ -12,7 +12,7 @@ image:
   repository: speedtools.azurecr.io/knowhow-azure-pipeline-repo
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "8.1.1"
+  tag: "9.0.0-SNAPSHOT"
 
 imagePullSecrets: []
 nameOverride: ""
