--- a/Kubernetes/knowhow-helm/knowhow-config/templates/configmap.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-config/templates/configmap.yaml
@@ -2,19 +2,40 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: knowhow-config
-  namespace: {{ .Values.env}}-knowhow
+  namespace: {{ .Values.env}}knowhow
 data:
-  forgotPassword.uiHost: "{{ .Values.env}}-psknowhow.tools.publicis.sapient.com"
-  corsFilterValidOrigin: "{{ .Values.env}}-psknowhow.tools.publicis.sapient.com"
-  isRepoToolEnable: "true"
+  #Common-Config for all application
   keystorefile: "/usr/lib/jvm/java-1.8.0-amazon-corretto/jre/lib/security/cacerts"
   spring.data.mongodb.database: "kpidashboard"
   flag.mailWithoutKafka: "false"
-  sendGridEnabled: "true"
-  spring.kafka.producer.bootstrap-servers: "crs-kafka-0.kafka-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:9092"
-  spring.kafka.consumer.bootstrap-servers: "crs-kafka-0.kafka-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:9092"
-  KAFKA_CFG_ZOOKEEPER_CONNECT: "crs-zookeeper-0.zookeeper-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:2181,crs-zookeeper-1.zookeeper-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:2181,crs-zookeeper-2.zookeeper-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:2181"
-  ZOO_SERVERS: "crs-zookeeper-0.zookeeper-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:2888:3888,crs-zookeeper-1.zookeeper-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:2888:3888,crs-zookeeper-2.zookeeper-cluster.{{ .Values.env}}-knowhow.svc.cluster.local:2888:3888"
-  
+  notification.switch: "true"
+  sendGridEnabled: "false"
+
+  # customapi Config
+  #auth.centralAuthBaseURL: "https://{{ .Values.env}}authnauth.tools.publicis.sapient.com"
+  auth.centralAuthBaseURL: "http://authnauth-ui.{{ .Values.env}}auth.svc.cluster.local:80"
+  auth.subDomainCookie: "true"
+  auth.domain: "tools.publicis.sapient.com"
+  forgotPassword.uiHost: "{{ .Values.env}}psknowhow.tools.publicis.sapient.com"
+  corsFilterValidOrigin: "{{ .Values.env}}psknowhow.tools.publicis.sapient.com"
+  isRepoToolEnable: "true"
+  versionnumber: "9.0.0-SNAPSHOT"
+
   # UI Config
-  analytics.switch: "true"
+  API_HOST: "customapi"
+  API_PORT: "8080"
+  CENTRAL_LOGIN_URL: "https://{{ .Values.env}}authnauth.tools.publicis.sapient.com"
+  MAP_URL: "https://{{ .Values.env}}assessmentplatform.tools.publicis.sapient.com"
+  RETROS_URL: "https://{{ .Values.env}}retrospective.tools.publicis.sapient.com"
+  AUTHENTICATION_SERVICE: "true"
+  ENVIRONMENT: "prod"
+
+  #kafka-consumer-config
+  spring.kafka.consumer.bootstrap-servers: kafka-0.kafka-cluster.{{ .Values.env}}knowhow.svc.cluster.local:9092
+  spring.kafka.producer.bootstrap-servers: kafka-0.kafka-cluster.{{ .Values.env}}knowhow.svc.cluster.local:9092
+
+  #Zookeeper & Kafka
+  KAFKA_CFG_ZOOKEEPER_CONNECT: >-
+    zookeeper-0.zookeeper-cluster.{{ .Values.env}}knowhow.svc.cluster.local:2181
+  ZOO_SERVERS: >-
+    zookeeper-0.zookeeper-cluster.{{ .Values.env}}knowhow.svc.cluster.local:2888:3888
