--- a/Kubernetes/knowhow-helm/knowhow-customapi/values.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-customapi/values.yaml
@@ -2,17 +2,17 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 configmapname: knowhow-config
 
-env: uat
+env: stage-
 
 image:
   repository: speedtools.azurecr.io/knowhow-customapi
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "10.0.0-SNAPSHOT"
+  tag: "9.0.0-SNAPSHOT"
 
 imagePullSecrets: []
 nameOverride: ""
