--- a/Kubernetes/knowhow-helm/knowhow-zookeeper/values.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-zookeeper/values.yaml
@@ -4,10 +4,10 @@
 
 replicaCount: 1
 
-namespace: uat-knowhow
+namespace: stage-knowhow
 
 configmapname: knowhow-config
-env: uat
+env: stage
 image:
   repository: zookeeper
   pullPolicy: IfNotPresent
