--- a/Kubernetes/knowhow-helm/repotool-scanner-scheduler/cronjob.yaml
+++ b/Kubernetes/knowhow-helm/repotool-scanner-scheduler/cronjob.yaml
@@ -110,6 +110,6 @@ spec:
           schedulerName: default-scheduler
           securityContext: {}
           terminationGracePeriodSeconds: 30
-  schedule: "*/5 * * * *"
+  schedule: "0 */12 * * *"
   successfulJobsHistoryLimit: 3
   suspend: false
