--- a/Kubernetes/knowhow-helm/knowhow-jira-processor/templates/deployment.yaml
+++ b/Kubernetes/knowhow-helm/knowhow-jira-processor/templates/deployment.yaml
@@ -76,6 +76,17 @@ spec:
                   key: {{ .Values.env}}knhdbpassword
             - name: mongock.migration-scan-package
               value: com.publicissapient.kpidashboard.apis.mongock.installation
+            - name:  notification.switch
+              value: "false"
+            #Adding cron expressions
+            - name: jira.scrumBoardCron
+              value: "0 0 */12 * * *"
+            - name: jira.scrumJqlCron
+              value: "0 0 */12 * * *"
+            - name: jira.kanbanBoardCron
+              value: "0 0 */12 * * *"
+            - name: jira.kanbanJqlCron
+              value: "0 0 */12 * * *"
           envFrom:
           - configMapRef:
               name: {{ .Values.configmapname }}
