gave ownership to cert_loc

--- a/central-auth-service/central-login-ui-react/Dockerfile
+++ b/central-auth-service/central-login-ui-react/Dockerfile
@@ -21,7 +21,7 @@ ENV CONF_LOC="/etc/nginx" \
     UI2_ASSETS_ARCHIVE="authui.tar" \
     REACT_APP_DNS=${DNS_NAME} \
     # ASSETS_ARCHIVE="*.tar" \
-    cert_loc="/etc/ssl/certs"
+    CERT_LOC="/etc/ssl/certs"
 
 RUN rm -rf ${CONF_LOC}/nginx.conf ${CONF_LOC}/conf.d/default.conf ${HTML_LOC}index.html
 RUN mkdir -p ${PID_LOC}  ${UI2_LOC} /var/www/authui
@@ -29,11 +29,13 @@ RUN mkdir -p ${PID_LOC}  ${UI2_LOC} /var/www/authui
 COPY nginx/nginx_dev.conf /tmp/nginx_dev.conf
 COPY nginx/nginx_prod.conf /tmp/nginx_prod.conf
 COPY ${UI2_ASSETS_ARCHIVE} ${HTML_LOC}
+# Copy .env file and shell script to container
+COPY env.sh $SCRIPTS_LOC
+COPY .env $SCRIPTS_LOC
 # COPY nginx/start_nginx.sh ${START_SCRIPT_LOC}/start_nginx.sh
-# COPY certs/* ${cert_loc}/
+# COPY certs/* ${CERT_LOC}/
 # COPY src/assets /var/www/authui/
 
-RUN tar xvf ${HTML_LOC}${UI2_ASSETS_ARCHIVE} -C /var/www/authui
 # RUN chmod +x ${START_SCRIPT_LOC}/start_nginx.sh
 # RUN rm -f ${HTML_LOC}${ASSETS_ARCHIVE}
 
@@ -41,21 +43,16 @@ EXPOSE 80 443
 
 # granting permission's
 
-RUN chown -R $USER:$USER ${CONF_LOC} \
+RUN tar xvf ${HTML_LOC}${UI2_ASSETS_ARCHIVE} -C /var/www/authui \
+    && chown -R $USER:$USER ${CONF_LOC} \
+    && chown -R $USER:$USER ${CERT_LOC} \
     && chown -R $USER:$USER /var/ \
     && apk add --no-cache libcap \
     && setcap 'cap_net_bind_service=+ep' /usr/sbin/nginx \
-    && apk add --no-cache bash
-
-# Copy .env file and shell script to container
-COPY env.sh $SCRIPTS_LOC
-COPY .env $SCRIPTS_LOC
-
+    && apk add --no-cache bash \
+    && chmod +x $SCRIPTS_LOC/env.sh
 
 WORKDIR $SCRIPTS_LOC
-
-# Make our shell script executable
-RUN chmod +x env.sh
 
 USER $USER:$GID
 
