added user in dockerfile

--- a/central-auth-service/database/Dockerfile
+++ b/central-auth-service/database/Dockerfile
@@ -1,14 +1,27 @@
 FROM psknowhow/postgres:13.11-alpine3.18
 
+# Set a non-root user
+ARG USER=knowhowuser
+ARG UID=1000
+ARG GID=1000
+
+RUN yum install -y shadow-utils \
+    && ln -sf /bin/bash /bin/sh \ 
+    && groupadd -g $GID $USER \
+    && useradd -u $UID -g $GID -m -s /bin/bash $USER
+
 ENV POSTGRES_USER="postgres"
 ENV PGDATA="/var/lib/postgresql/data"
 
-COPY ddl/ /docker-entrypoint-initdb.d/ddl/
-COPY dml/ /docker-entrypoint-initdb.d/dml/
-COPY main.sh /docker-entrypoint-initdb.d/
+COPY * /docker-entrypoint-initdb.d/
+# COPY dml/ /docker-entrypoint-initdb.d/dml/
+# COPY main.sh /docker-entrypoint-initdb.d/
 
 WORKDIR /docker-entrypoint-initdb.d
 
-RUN chmod -R 777 /docker-entrypoint-initdb.d/
+RUN chown -R $USER:$USER /docker-entrypoint-initdb.d/ \
+    && chmod +x main.sh
+
+USER $USER:$GID
 
 EXPOSE 5432
