added package to group add

--- a/central-auth-service/database/Dockerfile
+++ b/central-auth-service/database/Dockerfile
@@ -5,7 +5,8 @@ ARG USER=knowhowuser
 ARG UID=1000
 ARG GID=1000
 
-RUN groupadd -g $GID $USER \
+RUN apk --no-cache add shadow \
+    && groupadd -g $GID $USER \
     && useradd -u $UID -g $GID -m -s /bin/bash $USER
 
 ENV POSTGRES_USER="postgres"
