JIRA-Test-JQL implementation on Jira Test

--- a/processors/jira-xray-zephyr-squad/src/main/resources/application.properties
+++ b/processors/jira-xray-zephyr-squad/src/main/resources/application.properties
@@ -34,6 +34,7 @@ jira.test.startDate=2022-05-01T00:00:00.0000000
 # flag to consider jira.startDate configuration
 jira.test.considerStartDate=false
 jira.test.minsToReduce=30
+jira.prevMonthCountToFetchData=12
 
 ##logging level
 logging.file=./logs/jiraTest.log
