--- a/central-auth-service/database/Dockerfile
+++ b/central-auth-service/database/Dockerfile
@@ -13,6 +13,7 @@ ENV POSTGRES_USER="postgres"
 ENV PGDATA="/var/lib/postgresql/data"
 
 COPY * /docker-entrypoint-initdb.d/
+RUN ls -ltr
 # COPY dml/ /docker-entrypoint-initdb.d/dml/
 # COPY main.sh /docker-entrypoint-initdb.d/
 
@@ -20,7 +21,7 @@ WORKDIR /docker-entrypoint-initdb.d
 
 RUN chown -R $USER:$USER /docker-entrypoint-initdb.d/ \
     && chown -R $PGDATA \
-    && chmod +x main.sh
+    && chmod +x /docker-entrypoint-initdb.d/main.sh
 
 USER $USER:$GID
 
