--- a/central-auth-service/database/Dockerfile
+++ b/central-auth-service/database/Dockerfile
@@ -13,14 +13,14 @@ ENV POSTGRES_USER="postgres"
 ENV PGDATA="/var/lib/postgresql/data"
 
 COPY * /docker-entrypoint-initdb.d/
-RUN ls -ltr
+RUN ls -ltr /docker-entrypoint-initdb.d/
 # COPY dml/ /docker-entrypoint-initdb.d/dml/
 # COPY main.sh /docker-entrypoint-initdb.d/
 
 WORKDIR /docker-entrypoint-initdb.d
 
 RUN chown -R $USER:$USER /docker-entrypoint-initdb.d/ \
-    && chown -R $PGDATA \
+    && chown -R $USER:$USER $PGDATA \
     && chmod +x /docker-entrypoint-initdb.d/main.sh
 
 USER $USER:$GID
