--- a/central-auth-service/database/Dockerfile
+++ b/central-auth-service/database/Dockerfile
@@ -12,7 +12,7 @@ RUN apk --no-cache add shadow \
 ENV POSTGRES_USER="postgres"
 ENV PGDATA="/var/lib/postgresql/data"
 
-COPY ../database /docker-entrypoint-initdb.d/
+COPY . /docker-entrypoint-initdb.d/
 RUN ls -ltr /docker-entrypoint-initdb.d/
 # COPY dml/ /docker-entrypoint-initdb.d/dml/
 # COPY main.sh /docker-entrypoint-initdb.d/
