--- a/processors/jira-xray-zephyr-squad/src/main/resources/application.properties
+++ b/processors/jira-xray-zephyr-squad/src/main/resources/application.properties
@@ -16,12 +16,12 @@
 #
 ################################################################################
 
-# Mongo DB connection properties
-spring.data.mongodb.host=mongodb
+## MongoDB related properties
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=kpidashboard
-spring.data.mongodb.username=devadmin
-spring.data.mongodb.password=
+spring.data.mongodb.database=GS-DB-74
+#spring.data.mongodb.username=devadmin
+#spring.data.mongodb.password=
 ## MongoDB related properties - End
 
 spring.application.name=Jiratest-Processor
@@ -53,7 +53,7 @@ jira.test.threadPoolSize=3
 server.port=50020
 
 ## Auth properties -Start
-aesEncryptionKey=
+aesEncryptionKey=708C150A5363290AAE3F579BF3746AD5
 ## Auth properties -End
 
 ## jira apis for getUser call
@@ -61,9 +61,9 @@ jira.test.jiraCloudGetUserApi=user/search?query=
 jira.test.jiraServerGetUserApi=user/search?username=
 
 ##to exclude linkage in jira stories
-jira.test.excludeLinks=cloned from,cloned to
-
+jira.test.excludeLinks
 #extra keyword to append for direct link to issue
+=cloned from,cloned to
 jira.test.jiraDirectTicketLinkKey=browse/
 jira.test.jiraCloudDirectTicketLinkKey=browse/
 
