--- a/processors/jira/src/main/resources/application.properties
+++ b/processors/jira/src/main/resources/application.properties
@@ -17,11 +17,11 @@
 ################################################################################
 
 ## MongoDB related properties
-spring.data.mongodb.host=mongodb
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=kpidashboard
-spring.data.mongodb.username=devadmin
-spring.data.mongodb.password=
+spring.data.mongodb.database=GS-DB-74
+#spring.data.mongodb.username=devadmin
+#spring.data.mongodb.password=
 ## MongoDB related properties end
 
 spring.batch.jdbc.initialize-schema=always
@@ -53,11 +53,11 @@ logging.level.com.publicissapient.kpidashboard.processor=DEBUG
 # properties in mins to set socket timeout
 jira.socketTimeOut=0
 # CACHE Specific
-jira.customApiBaseUrl=http://customapi:8080/
+jira.customApiBaseUrl=http://localhost:8080/
 
 server.port=50008
 ## Auth properties -Start
-aesEncryptionKey=
+aesEncryptionKey=708C150A5363290AAE3F579BF3746AD5
 ## Auth properties -End
 ## jira apis for getUser call
 jira.jiraCloudGetUserApi=user/search?query=
