DTS-36011: Yum clean all dockerfile vln fix

--- a/processors/azure-pipeline-repo-processor-startup/Dockerfile
+++ b/processors/azure-pipeline-repo-processor-startup/Dockerfile
@@ -13,7 +13,8 @@ WORKDIR /app
 RUN ln -sf /bin/bash /bin/sh \
     && yum install -y shadow-utils \
     && groupadd -g $GID $USER \
-    && useradd -u $UID -g $GID -m -s /bin/bash $USER 
+    && useradd -u $UID -g $GID -m -s /bin/bash $USER \
+    && yum clean all -y
 
 # Set environment variables for volumes
 
