--- a/processors/azure-boards/Dockerfile
+++ b/processors/azure-boards/Dockerfile
@@ -12,7 +12,8 @@ WORKDIR /app
 RUN ln -sf /bin/bash /bin/sh \
     && yum install -y shadow-utils \
     && groupadd -g $GID $USER \
-    && useradd -u $UID -g $GID -m -s /bin/bash $USER
+    && useradd -u $UID -g $GID -m -s /bin/bash $USER \
+    && yum clean all -y
     #&& apt-get update && apt upgrade libc-bin -y
 
 # Set environment variables for volumes
