--- a/processors/devops-processor-startup/Dockerfile
+++ b/processors/devops-processor-startup/Dockerfile
@@ -9,7 +9,8 @@ ARG GID=1000
 RUN ln -sf /bin/bash /bin/sh \
     && yum install -y shadow-utils \
     && groupadd -g $GID $USER \
-    && useradd -u $UID -g $GID -m -s /bin/bash $USER
+    && useradd -u $UID -g $GID -m -s /bin/bash $USER \
+    && yum clean all -y
 
 # Set environment variables for volumes
 ENV APP_DIR="/app" \
