--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -108,6 +108,7 @@ kafka.mailtopic=mail-topic
 
 #Notification properties -Start
 
+#NeededToUpdate
 #Purpose of properties : property used to provide if any instance want to disable mail
 #possible values : true for mail sent , false for disable
 #used in/for : sent mail
@@ -118,10 +119,11 @@ notification.switch=true
 #used in/for : sent mail
 notification.env=development
 
+#NeededToUpdate
 #Purpose of properties : property used to send mail via kafka or smtp
 #possible values : true for smtp , false for kafka
 #used in/for : sent mail
-flag.mailWithoutKafka=false
+flag.mailWithoutKafka=true
 
 #####mail key and template mapping#####
 auth.mailTemplate.Access_Request=Access_Request_Template
