--- a/central-auth-service/authapi/pom.xml
+++ b/central-auth-service/authapi/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>authapi</artifactId>
 	<groupId>com.publicissapient.kpidashboard.apis</groupId>
-	<version>10.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
