SAML info updated

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -38,31 +38,30 @@ auth.baseUrl=http://authnauth:8787
 auth.baseUiUrl=
 
 #Purpose of properties : saml login details start
-#NeededToUpdate
-spring.security.saml2.serviceProvider.alias=
+
+#NeededToUpdate : Saml info update Start
+auth.holdingEntityId=
+auth.assertingEntityId=
+auth.alias=
+auth.samlLoginUrl=
+#NeededToUpdate : Saml info update End
+
+spring.security.saml2.serviceProvider.alias=${auth.alias}
 spring.security.saml2.serviceProvider.signMetadata=false
 spring.security.saml2.serviceProvider.signRequests=false
 spring.security.saml2.serviceProvider.encryptAssertions=false
 spring.security.saml2.serviceProvider.singleLogoutEnabled=true
 spring.security.saml2.serviceProvider.wantAssertionsSigned=true
-#NeededToUpdate
-spring.security.saml2.serviceProvider.entityId=
+spring.security.saml2.serviceProvider.entityId=${auth.holdingEntityId}
 spring.security.saml2.serviceProvider.basePath=${auth.baseUrl}${server.servlet.context-path}
 spring.security.saml2.serviceProvider.nameIds=urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
 spring.security.saml2.serviceProvider.keys.active.name=sp-signing-key-1
-#NeededToUpdate
-spring.security.saml2.serviceProvider.providers[0].alias=
+spring.security.saml2.serviceProvider.providers[0].alias=${auth.alias}
 spring.security.saml2.serviceProvider.providers[0].skipSslValidation=true
-#NeededToUpdate
-spring.security.saml2.serviceProvider.providers[0].metadata=
+spring.security.saml2.serviceProvider.providers[0].metadata=${auth.samlLoginUrl}
 spring.security.saml2.serviceProvider.providers[0].authenticationRequestBinding=urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST
 
 auth.samlMaxAuthenticationAgeMillis=604800000
-
-#NeededToUpdate
-auth.holdingEntityId=
-#NeededToUpdate
-auth.assertingEntityId=
 auth.nameId=urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
 auth.logoutEmailQueryParam=email
 auth.loginCallback=${auth.baseUrl}${server.servlet.context-path}/saml/sp/discovery?idp=${auth.assertingEntityId}
