--- a/Kubernetes-prod/knowhow-helm/debbie-config/values.yaml
+++ b/Kubernetes-prod/knowhow-helm/debbie-config/values.yaml
@@ -4,11 +4,11 @@
 
 replicaCount: 1
 
-namespace: stage-knowhow
+namespace: prod-knowhow
 
-env: stage
+env: prod
 
-secretname: stage-debbie-secrets
+secretname: prod-debbie-secrets
 
 imagePullSecrets: []
 nameOverride: ""
