--- a/Kubernetes-prod/knowhow-helm/debbie-rabbitmq/templates/service.yaml
+++ b/Kubernetes-prod/knowhow-helm/debbie-rabbitmq/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "debbie-rabbitmq.fullname" . }}
+  name: debbie-rabbitmq
   labels:
     {{- include "debbie-rabbitmq.labels" . | nindent 4 }}
   namespace: {{ .Values.env}}-knowhow
