--- a/processors/azure-boards/pom.xml
+++ b/processors/azure-boards/pom.xml
@@ -22,13 +22,13 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>azure-processor</artifactId>
 	<description>Azure processor fetches data from Azure api</description>
-	<version>9.0.0-SNAPSHOT</version>
+	<version>9.0.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.0</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 
 	<properties>
@@ -417,6 +417,6 @@
 	</build>
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>9.0.0</tag>
 	</scm>
 </project>
