--- a/processors/github/pom.xml
+++ b/processors/github/pom.xml
@@ -23,13 +23,13 @@
   <description>Github processor service</description>
   <packaging>jar</packaging>
   <artifactId>github-processor</artifactId>
-  <version>9.0.0-SNAPSHOT</version>
+  <version>9.0.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.2.0</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <properties>
@@ -281,7 +281,7 @@
 
 
   <scm>
-    <tag>4.6.1</tag>
+    <tag>9.0.0</tag>
   </scm>
 </project>
 
