--- a/processors/jira/pom.xml
+++ b/processors/jira/pom.xml
@@ -15,13 +15,13 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>jira-processor</artifactId>
 	<description>Jira processor fetches data from JIRA api</description>
-	<version>9.0.0-SNAPSHOT</version>
+	<version>9.0.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.0</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 
 	<properties>
@@ -595,6 +595,6 @@
 	</build>
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>9.0.0</tag>
 	</scm>
 </project>
