--- a/processors/sonar/pom.xml
+++ b/processors/sonar/pom.xml
@@ -24,13 +24,13 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>CodeQuality Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>9.0.0-SNAPSHOT</version>
+	<version>9.0.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.0</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 
 	<properties>
@@ -285,6 +285,6 @@
 
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>9.0.0</tag>
 	</scm>
 </project>
