--- a/kafka-consumers/notification-consumer/pom.xml
+++ b/kafka-consumers/notification-consumer/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>notification-consumer</artifactId>
-	<version>9.0.0</version>
+	<version>9.0.0-SNAPSHOT</version>
 	<name>notification-consumer</name>
 	<description>Notification consumer for Apache Kafka</description>
 	<properties>
@@ -211,7 +211,7 @@
 	</build>
 
 	<scm>
-		<tag>9.0.0</tag>
+		<tag>4.6.1</tag>
 	</scm>
 
 </project>
