--- a/processors/azure-boards/pom.xml
+++ b/processors/azure-boards/pom.xml
@@ -22,7 +22,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>azure-processor</artifactId>
 	<description>Azure processor fetches data from Azure api</description>
-	<version>8.0.0</version>
+	<version>8.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
