--- a/processors/azure-repo/pom.xml
+++ b/processors/azure-repo/pom.xml
@@ -16,7 +16,7 @@
 	<description>Azure Repo processor service</description>
 	<packaging>jar</packaging>
 	<artifactId>azurerepo-processor</artifactId>
-	<version>8.0.0</version>
+	<version>8.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
