--- a/processors/github/pom.xml
+++ b/processors/github/pom.xml
@@ -23,7 +23,7 @@
   <description>Github processor service</description>
   <packaging>jar</packaging>
   <artifactId>github-processor</artifactId>
-  <version>9.0.0-SNAPSHOT</version>
+  <version>develop</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
