--- a/processors/jira/pom.xml
+++ b/processors/jira/pom.xml
@@ -15,7 +15,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>jira-processor</artifactId>
 	<description>Jira processor fetches data from JIRA api</description>
-	<version>9.0.0-SNAPSHOT</version>
+	<version>develop</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
