--- a/processors/sonar/pom.xml
+++ b/processors/sonar/pom.xml
@@ -24,7 +24,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>CodeQuality Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>9.0.0-SNAPSHOT</version>
+	<version>develop</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
