--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <groupId>com.publicissapient.kpidashboard</groupId>
-    <artifactId>Kpidashboard-1</artifactId>
+    <artifactId>Kpidashboard</artifactId>
     <version>develop</version>
 
     <properties>
