--- a/central-auth-service/authcommon/pom.xml
+++ b/central-auth-service/authcommon/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.publicissapient.kpidashboard</groupId>
   <artifactId>authcommon</artifactId>
-  <version>develop</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <parent>
