--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <packaging>pom</packaging>
     <groupId>com.publicissapient.kpidashboard</groupId>
     <artifactId>Kpidashboard</artifactId>
-    <version>develop</version>
+    <version>9.1.0-SNAPSHOT</version>
 
     <properties>
         <docker.useConfigFile>false</docker.useConfigFile>
