--- a/processors/teamcity/pom.xml
+++ b/processors/teamcity/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Teamcity Build Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>develop</version>
+	<version>9.1.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
