--- a/Kubernetes-prod/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/configmap.yaml
@@ -19,7 +19,7 @@ data:
   forgotPassword.uiHost: "psknowhow.tools.publicis.sapient.com"
   corsFilterValidOrigin: "psknowhow.tools.publicis.sapient.com"
   isRepoToolEnable: "true"
-  versionnumber: "9.0.0-SNAPSHOT"
+  versionnumber: "9.0.0"
 
   # UI Config
   API_HOST: "customapi"
@@ -29,6 +29,7 @@ data:
   RETROS_URL: "https://rr.tools.publicis.sapient.com"
   AUTHENTICATION_SERVICE: "true"
   ENVIRONMENT: "prod"
+  SPEED_SUITE: "false"
 
   #kafka-consumer-config
   spring.kafka.consumer.bootstrap-servers: kafka-0.kafka-cluster.prod-knowhow.svc.cluster.local:9092
