--- a/Kubernetes-prod/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/configmap.yaml
@@ -29,7 +29,7 @@ data:
   RETROS_URL: "https://rr.tools.publicis.sapient.com"
   AUTHENTICATION_SERVICE: "true"
   ENVIRONMENT: "prod"
-  SPEED_SUITE: "false"
+  SPEED_SUITE: "true"
 
   #kafka-consumer-config
   spring.kafka.consumer.bootstrap-servers: kafka-0.kafka-cluster.prod-knowhow.svc.cluster.local:9092
